# sandbox

./: .gitignore  README.md
cmake/: CMakeLists.txt  build_vs2017.bat  find_cmake.bat  find_vs.bat  generate_vs2017.bat
source/common/: CMakeLists.txt
source/common/logs/: log.cpp  log.hpp  log_stdout.cpp  log_stdout.hpp  log_stdout_win.cpp  log_stdout_win.hpp
source/common/utils/: singleton.hpp
source/main/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt  tests.cpp
